@@ -151,6 +151,7 @@ static CMPIInstance *__ift_clone(const CMPIInstance * instance, CMPIStatus * rc)
    new->mem_state=MEM_NOT_TRACKED;
    new->property_list = __duplicate_list((const char**)i->property_list);
    new->key_list = __duplicate_list((const char**)i->key_list);
+   new->filtered = i->filtered;
 
    ((CMPIInstance*)new)->hdl =
        ClInstanceRebuild((ClInstance *) instance->hdl, NULL);
